  with zk operation without connecting to ZooKeeper server.
  (Arshad Mohammad via phunt)

  ZOOKEEPER-2152: Intermittent failure in TestReconfig.cc
  (Michael Han via phunt)

  ZOOKEEPER-2548: zooInspector does not start on Windows
  (Arshad Mohammad via phunt)

  ZOOKEEPER-2558: Potential memory leak in recordio.c
  (Michael Han via phunt)

IMPROVEMENTS:

  ZOOKEEPER-2505: Use shared library instead of static library in C
  client unit test (Michael Han via phunt)

  ZOOKEEPER-2489: Upgrade Jetty dependency to a recent stable release
  version. (Edward Ribeiro via phunt)


Release 3.5.2 - 06/29/2016

BUGFIXES:

  ZOOKEEPER-2256: Zookeeper is not using specified JMX port in zkEnv.sh
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2264: Wrong error message when secureClientPortAddress is
  configured but secureClientPort is not configured (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2269: NullPointerException in RemotePeerBean
  (Arshad Mohammad via rgs)

  ZOOKEEPER-2245: SimpleSysTest test cases fails (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2279: QuorumPeer loadDataBase() error message is incorrect
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-1803: Add description for pzxid in programmer's guide
  (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2253: C asserts ordering of ping requests, while Java client does not
  (Chris Chen via rgs)

  ZOOKEEPER-2244: On Windows zookeeper fails to restart (Arshad Mohammad via rakeshr)

  ZOOKEEPER-2268: Zookeeper doc creation fails on windows
  (Arshad Mohammad via cnauroth)

  ZOOKEEPER-2281: ZK Server startup fails if there are spaces in the JAVA_HOME
  path (Neha Bathra via cnauroth)

  ZOOKEEPER-1460: IPv6 literal address not supported for quorum members
  (Joseph Walton via cnauroth)

  ZOOKEEPER-2239: JMX State from LocalPeerBean incorrect (Kevin Lee via rakeshr)

  ZOOKEEPER-2302: Some test cases are not running because wrongly named
  (Arshad Mohammad via fpj)
